--- a/cv_style.css
+++ b/cv_style.css
@@ -15,6 +15,8 @@ body {
 .profile_sec {
     height: 100vh;
     width: 100vw;
+    display: flex;
+    align-items: center;
     /* background-attachment: fixed; */
     background-position: center;
     background-repeat: no-repeat;
