--- a/cv_style.css
+++ b/cv_style.css
@@ -41,16 +41,17 @@ body {
     justify-content: space-between;
     align-items: center;
     color: rgb(255, 255, 255);
-    padding: 10vw;
-    
+    padding: 10vw; 
 }
 
 .sec1 img {
-    max-width: 100%;
-    height: auto;
     object-fit: cover;
     border-radius: 10px;
     background-color: white;
+
+    width: 60%; 
+    height: auto; 
+    display: block;
 }
 
 .sec2_background {
